Amend Home page text

--- a/BookListMVC/Views/Home/Index.cshtml
+++ b/BookListMVC/Views/Home/Index.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Welcome</h1>
+        <p>This is some practice thing I am doing to create and host a .Net Core MVC web application.</p>
+        <p><a asp-controller="Books" asp-action="Index">Click here</a> to access a books database, or click the link in the navbar above.</p>
+    </div>
