--- a/BookListMVC/Views/Home/Index.cshtml
+++ b/BookListMVC/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
 
     <div class="text-center">
         <h1 class="display-4">Welcome</h1>
-        <p>This is some practice thing I am doing to create and host a .Net Core MVC web application.</p>
+        <p>This is some practice thing I am doing to create a .Net Core MVC web application and to host it in Microsoft Azure.</p>
+        <p>The data is stored in a SQL database which is also hosted on Microsoft Azure.</p>
         <p><a asp-controller="Books" asp-action="Index">Click here</a> to access a books database, or click the link in the navbar above.</p>
     </div>
